--- a/MyOrgApim/builds/azure-pipelines.yml
+++ b/MyOrgApim/builds/azure-pipelines.yml
@@ -4,16 +4,34 @@
 # https://aka.ms/yaml
 
 trigger:
-- master
+  paths:
+    include:
+      - MyOrgApim
+  branches:
+    include:
+      - master
 
-pool:
-  vmImage: 'ubuntu-latest'
+stages:
+  - stage: buildstage
+    displayName: Build
+    jobs:
+      - job: buildcontainer
+        displayName: Create Container
+        pool:
+          vmImage: 'ubuntu-latest'
+        steps:
+          - task: Docker@2 
+            displayName: Login to Docker Hub
+            inputs:
+              command: login
+              containerRegistry: xximjasonxx-dockerhub
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+          - task: Docker@2
+            displayName: Build and Push to Docker Hub
+            inputs:
+              command: buildAndPush
+              Dockerfile: Dockerfile
+              buildContext: $(Build.SourcesDirectory)/MyOrgApim
+              repository: xximjasonxx/peopleapi
+              tags: |
+                $(Build.BuildId)
