updated path to Dockerfile
Unsure the purpose of Build Context, thought it would find the file

--- a/MyOrgApim/builds/azure-pipelines.yml
+++ b/MyOrgApim/builds/azure-pipelines.yml
@@ -30,7 +30,7 @@ stages:
             displayName: Build and Push to Docker Hub
             inputs:
               command: buildAndPush
-              Dockerfile: Dockerfile
+              Dockerfile: $(Build.SourcesDirectory)/MyOrgApim/Dockerfile
               buildContext: $(Build.SourcesDirectory)/MyOrgApim
               repository: xximjasonxx/peopleapi
               tags: |
