--- a/MyOrgApim/builds/azure-pipelines.yml
+++ b/MyOrgApim/builds/azure-pipelines.yml
@@ -35,3 +35,39 @@ stages:
               repository: xximjasonxx/peopleapi
               tags: |
                 $(Build.BuildId)
+
+  - stage: deploybackend
+    displayName: Deploy
+    jobs:
+      - job: deployappservice
+        displayName: Deploy App Service
+        pool:
+          vmImage: 'ubuntu-latest'
+        steps:
+          - task: TerraformInstaller@0
+            displayName: Install Terraform
+            inputs:
+              terraformVersion: '0.12.3'
+
+          - task: TerraformCLI@0
+            inputs:
+              command: 'init'
+              workingDirectory: '$(System.DefaultWorkingDirectory)/MyOrgApim/PeopleApi/infrastructure/app'
+              backendType: 'azurerm'
+              backendServiceArm: 'Visual Studio Professional with MSDN(aa5e6005-924a-495b-ab54-f2e5bc28b9e7)'
+              backendAzureRmResourceGroupName: 'rg-my-training-x78s'
+              backendAzureRmStorageAccountName: 'storagemytrainingx78s'
+              backendAzureRmContainerName: 'tfstate'
+              backendAzureRmKey: 'peopleapi-state'
+
+          - task: CmdLine@2
+            displayName: Set Environment Variable for Tag
+            inputs:
+              script: 'TAG_NAME=${Build.BuildId}'
+
+          - task: TerraformCLI@0
+            inputs:
+              command: 'apply'
+              workingDirectory: '$(System.DefaultWorkingDirectory)/MyOrgApim/PeopleApi/infrastructure'
+              environmentServiceName: 'Visual Studio Professional with MSDN(aa5e6005-924a-495b-ab54-f2e5bc28b9e7)'
+              commandOptions: '-var "appservice_name=peopleapi"'
