--- a/MyOrgApim/PeopleApi/infrastructure/app/docker-compose.yml
+++ b/MyOrgApim/PeopleApi/infrastructure/app/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     restart: always
 
   webapp:
-    image: xximjasonxx/peopleapi:${TAG_NAME}
+    image: xximjasonxx/peopleapi:latest
     #build:
     #  context: ../
     container_name: people-api
