fixed apply path

--- a/MyOrgApim/builds/azure-pipelines.yml
+++ b/MyOrgApim/builds/azure-pipelines.yml
@@ -51,6 +51,7 @@ stages:
               terraformVersion: '0.12.3'
 
           - task: TerraformCLI@0
+            displayName: Init Terraform (App)
             inputs:
               command: 'init'
               workingDirectory: '$(System.DefaultWorkingDirectory)/MyOrgApim/PeopleApi/infrastructure/app'
@@ -62,8 +63,9 @@ stages:
               backendAzureRmKey: 'peopleapi-state'
 
           - task: TerraformCLI@0
+            displayName: Apply Terraform (app)
             inputs:
               command: 'apply'
-              workingDirectory: '$(System.DefaultWorkingDirectory)/MyOrgApim/PeopleApi/infrastructure'
+              workingDirectory: '$(System.DefaultWorkingDirectory)/MyOrgApim/PeopleApi/infrastructure/app'
               environmentServiceName: 'Visual Studio Professional with MSDN(aa5e6005-924a-495b-ab54-f2e5bc28b9e7)'
               commandOptions: '-var "appservice_name=peopleapi"'
