updated variable handoff logic

--- a/MyOrgApim/builds/azure-pipelines.yml
+++ b/MyOrgApim/builds/azure-pipelines.yml
@@ -72,7 +72,7 @@ stages:
               workingDirectory: '$(System.DefaultWorkingDirectory)/MyOrgApim/PeopleApi/infrastructure/app'
               environmentServiceName: 'Visual Studio Professional with MSDN(aa5e6005-924a-495b-ab54-f2e5bc28b9e7)'
               commandOptions: '-var "appservice_name=peopleapi" -var "build_version=$(Build.BuildId)"'
-              outputVariable: $(appservice_raw)
+              outputVariable: $(appservice_url)
 
   - stage: updateapim
     displayName: APIM Update
@@ -93,4 +93,4 @@ stages:
           vmImage: 'ubuntu-latest'
         steps:
           - script: |
-              echo 'I will start now'
+              echo $(appservice_url)
