--- a/MyOrgApim/builds/azure-pipelines.yml
+++ b/MyOrgApim/builds/azure-pipelines.yml
@@ -69,12 +69,10 @@ stages:
               workingDirectory: '$(System.DefaultWorkingDirectory)/MyOrgApim/PeopleApi/infrastructure/app'
               environmentServiceName: 'Visual Studio Professional with MSDN(aa5e6005-924a-495b-ab54-f2e5bc28b9e7)'
               commandOptions: '-var "appservice_name=peopleapi" -var "build_version=$(Build.BuildId)"'
-              outputVariable: $(appservice_url)
 
           - script: |
-              echo "##vso[task.setvariable variable=appServiceUrl; isOutput=true]$(appservice_url.value)"
-            name: appServiceUrlSetTask
-            displayName: Process TF Apply Output
+              terraform output -state=$(System.DefaultWorkingDirectory)/MyOrgApim/PeopleApi/infrastructure/app -json > file.json
+              cat file.json
         
       - job: checkupdate
         displayName: Wait for Backend
