changed variable def syntax

--- a/MyOrgApim/builds/azure-pipelines.yml
+++ b/MyOrgApim/builds/azure-pipelines.yml
@@ -86,8 +86,7 @@ stages:
         displayName: Wait for Backend
         dependsOn: [ "deployappservice" ]
         variables:
-          - name: appServiceUrl
-            value: $[ dependencies.deployappservice.outputs['tfApplyVars.appServiceUrl'] ]
+          appServiceUrl: $[ dependencies.deployappservice.outputs['tfApplyVars.appServiceUrl'] ]
         pool:
           vmImage: 'ubuntu-latest'
         steps:
