reverted variable syntax change - not needed

--- a/MyOrgApim/builds/azure-pipelines.yml
+++ b/MyOrgApim/builds/azure-pipelines.yml
@@ -86,7 +86,8 @@ stages:
         displayName: Wait for Backend
         dependsOn: [ "deployappservice" ]
         variables:
-          appServiceUrl: $[ dependencies.deployappservice.outputs['tfApplyVars.appServiceUrl'] ]
+          - name: appServiceUrl
+            value: $[ dependencies.deployappservice.outputs['tfApplyVars.appServiceUrl'] ]
         pool:
           vmImage: 'ubuntu-latest'
         steps:
