--- a/MyOrgApim/builds/azure-pipelines.yml
+++ b/MyOrgApim/builds/azure-pipelines.yml
@@ -78,9 +78,6 @@ stages:
             workingDirectory: $(System.DefaultWorkingDirectory)/MyOrgApim/PeopleApi/infrastructure/app
             name: tfApplyVars
             displayName: Process TF Outputs
-
-          - script: |
-              echo $(tfApplyVars.appServiceUrl)
         
       - job: checkupdate
         displayName: Wait for Backend
@@ -97,9 +94,34 @@ stages:
 
       - job: updateapi
         displayName: Update APIM API
-        dependsOn: [ "checkupdate" ]
+        dependsOn: [ "checkupdate", "deployappservice" ]
+        variables:
+          - name: appServiceUrl
+            value: $[ dependencies.deployappservice.outputs['tfApplyVars.appServiceUrl'] ]
         pool:
           vmImage: 'ubuntu-latest'
         steps:
-          - script: |
-              echo $(appservice_url)
+          - task: TerraformInstaller@0
+            displayName: Install Terraform
+            inputs:
+              terraformVersion: '0.12.24'
+
+          - task: TerraformCLI@0
+            displayName: Init Terraform (Api)
+            inputs:
+              command: 'init'
+              workingDirectory: '$(System.DefaultWorkingDirectory)/MyOrgApim/PeopleApi/infrastructure/apim'
+              backendType: 'azurerm'
+              backendServiceArm: 'Visual Studio Professional with MSDN(aa5e6005-924a-495b-ab54-f2e5bc28b9e7)'
+              backendAzureRmResourceGroupName: 'rg-my-training-x78s'
+              backendAzureRmStorageAccountName: 'storagemytrainingx78s'
+              backendAzureRmContainerName: 'tfstate'
+              backendAzureRmKey: 'peopleapi-apim-state'
+
+          - task: TerraformCLI@0
+            displayName: Apply Terraform (app)
+            inputs:
+              command: 'apply'
+              workingDirectory: '$(System.DefaultWorkingDirectory)/MyOrgApim/PeopleApi/infrastructure/apim'
+              environmentServiceName: 'Visual Studio Professional with MSDN(aa5e6005-924a-495b-ab54-f2e5bc28b9e7)'
+              commandOptions: '-var "rg_name=rg-my-training-x78s" -var "apim_name=apim-my-training-x78s" -var "app_service_base_url=$(appServiceUrl)"'
