Modifications to clean up naming

--- a/MyOrgApim/PeopleApi/infrastructure/app/docker-compose-dev.yml
+++ b/MyOrgApim/PeopleApi/infrastructure/app/docker-compose-dev.yml
@@ -8,7 +8,7 @@ services:
     restart: always
 
   webapp:
-    image: xximjasonxx/peopleapi:latest
+    image: xximjasonxx/peopleapi-dev:latest
     #build:
     #  context: ../
     container_name: people-api
