--- a/MyOrgApim/builds/azure-pipelines.yml
+++ b/MyOrgApim/builds/azure-pipelines.yml
@@ -37,8 +37,8 @@ stages:
                 $(Build.BuildId)
                 latest
 
-  - stage: deploybackend
-    displayName: Deploy API
+  - stage: deploybackenddev
+    displayName: Deploy Dev
     jobs:
       - job: deployappservice
         displayName: Deploy App Service
@@ -125,3 +125,92 @@ stages:
               workingDirectory: '$(System.DefaultWorkingDirectory)/MyOrgApim/PeopleApi/infrastructure/apim'
               environmentServiceName: 'Visual Studio Professional with MSDN(aa5e6005-924a-495b-ab54-f2e5bc28b9e7)'
               commandOptions: '-var "rg_name=rg-trainingapp-dev" -var "apim_name=apim-trainingapp-dev" -var "app_service_base_url=$(appServiceUrl)" -var "app_name=trainingapp"'
+
+  - stage: deploybackendprod
+    displayName: Deploy Prod
+    jobs:
+      - job: deployappservice
+        displayName: Deploy App Service
+        pool:
+          vmImage: 'ubuntu-latest'
+        steps:
+          - task: TerraformInstaller@0
+            displayName: Install Terraform
+            inputs:
+              terraformVersion: '0.12.24'
+
+          - task: TerraformCLI@0
+            displayName: Init Terraform (App)
+            inputs:
+              command: 'init'
+              workingDirectory: '$(System.DefaultWorkingDirectory)/MyOrgApim/PeopleApi/infrastructure/app'
+              backendType: 'azurerm'
+              backendServiceArm: 'Visual Studio Professional with MSDN(aa5e6005-924a-495b-ab54-f2e5bc28b9e7)'
+              backendAzureRmResourceGroupName: 'rg-trainingapp-prod'
+              backendAzureRmStorageAccountName: 'storagetrainingaprodmsvs'
+              backendAzureRmContainerName: 'tfstate'
+              backendAzureRmKey: 'peopleapi-state'
+
+          - task: TerraformCLI@0
+            displayName: Apply Terraform (app)
+            inputs:
+              command: 'apply'
+              workingDirectory: '$(System.DefaultWorkingDirectory)/MyOrgApim/PeopleApi/infrastructure/app'
+              environmentServiceName: 'Visual Studio Professional with MSDN(aa5e6005-924a-495b-ab54-f2e5bc28b9e7)'
+              commandOptions: '-var "appservice_name=peopleapi" -var "build_version=$(Build.BuildId)" -var "env_name=prod" -var "rg_name=rg-trainingapp-prod"'
+
+          - script: |
+              terraform state pull > terraform.tfstate
+              AppServiceUrl=$(terraform output -json | jq '.appservice_url.value' -r)
+              echo $AppServiceUrl
+              echo "##vso[task.setvariable variable=appServiceUrl;isOutput=true]$AppServiceUrl"
+            workingDirectory: $(System.DefaultWorkingDirectory)/MyOrgApim/PeopleApi/infrastructure/app
+            name: tfApplyVars
+            displayName: Process TF Outputs
+        
+      - job: checkupdate
+        displayName: Wait for Backend
+        dependsOn: [ "deployappservice" ]
+        variables:
+          - name: appServiceUrl
+            value: $[ dependencies.deployappservice.outputs['tfApplyVars.appServiceUrl'] ]
+        pool:
+          vmImage: 'ubuntu-latest'
+        steps:
+          - script: |
+              docker run xximjasonxx/versionchecker:v4 $(appServiceUrl)/ping $(Build.BuildId) 100
+            displayName: Check for New Version
+
+      - job: updateapi
+        displayName: Update APIM API
+        dependsOn: [ "checkupdate", "deployappservice" ]
+        variables:
+          - name: appServiceUrl
+            value: $[ dependencies.deployappservice.outputs['tfApplyVars.appServiceUrl'] ]
+        pool:
+          vmImage: 'ubuntu-latest'
+        steps:
+          - task: TerraformInstaller@0
+            displayName: Install Terraform
+            inputs:
+              terraformVersion: '0.12.24'
+#
+          - task: TerraformCLI@0
+            displayName: Init Terraform (api)
+            inputs:
+              command: 'init'
+              workingDirectory: '$(System.DefaultWorkingDirectory)/MyOrgApim/PeopleApi/infrastructure/apim'
+              backendType: 'azurerm'
+              backendServiceArm: 'Visual Studio Professional with MSDN(aa5e6005-924a-495b-ab54-f2e5bc28b9e7)'
+              backendAzureRmResourceGroupName: 'rg-trainingapp-prod'
+              backendAzureRmStorageAccountName: 'storagetrainingaprodmsvs'
+              backendAzureRmContainerName: 'tfstate'
+              backendAzureRmKey: 'peopleapi-apim-state'
+#
+          - task: TerraformCLI@0
+            displayName: Apply Terraform (api)
+            inputs:
+              command: 'apply'
+              workingDirectory: '$(System.DefaultWorkingDirectory)/MyOrgApim/PeopleApi/infrastructure/apim'
+              environmentServiceName: 'Visual Studio Professional with MSDN(aa5e6005-924a-495b-ab54-f2e5bc28b9e7)'
+              commandOptions: '-var "rg_name=rg-trainingapp-prod" -var "apim_name=apim-trainingapp-prod" -var "app_service_base_url=$(appServiceUrl)" -var "app_name=trainingapp"'
