fixed incorrect storage account specification for dev

--- a/MyOrgApim/builds/azure-pipelines.yml
+++ b/MyOrgApim/builds/azure-pipelines.yml
@@ -58,7 +58,7 @@ stages:
               backendType: 'azurerm'
               backendServiceArm: 'Visual Studio Professional with MSDN(aa5e6005-924a-495b-ab54-f2e5bc28b9e7)'
               backendAzureRmResourceGroupName: 'rg-trainingapp-dev'
-              backendAzureRmStorageAccountName: 'storagetrainingapdevfkh6'
+              backendAzureRmStorageAccountName: 'storagetrainingadevzzj6'
               backendAzureRmContainerName: 'tfstate'
               backendAzureRmKey: 'peopleapi-state'
 
@@ -114,7 +114,7 @@ stages:
               backendType: 'azurerm'
               backendServiceArm: 'Visual Studio Professional with MSDN(aa5e6005-924a-495b-ab54-f2e5bc28b9e7)'
               backendAzureRmResourceGroupName: 'rg-trainingapp-dev'
-              backendAzureRmStorageAccountName: 'storagetrainingapdevfkh6'
+              backendAzureRmStorageAccountName: 'storagetrainingadevzzj6'
               backendAzureRmContainerName: 'tfstate'
               backendAzureRmKey: 'peopleapi-apim-state'
 
