cmdlet continues to not be found - trying to get more information

--- a/MyOrgApim/builds/azure-pipelines.yml
+++ b/MyOrgApim/builds/azure-pipelines.yml
@@ -155,6 +155,8 @@ stages:
             value: $[ dependencies.updateapi.outputs['tfApplyVars.personApiId'] ]
           - name: appServiceUrl
             value: $[ dependencies.deployappservice.outputs['tfApplyVars.appServiceUrl'] ]
+          - name: system.debug
+            value: true
         steps:
           - task: AzurePowerShell@4
             displayName: Import API
