enable rm alias added

--- a/MyOrgApim/builds/azure-pipelines.yml
+++ b/MyOrgApim/builds/azure-pipelines.yml
@@ -165,7 +165,7 @@ stages:
               scriptType: inlineScript
               azurePowerShellVersion: LatestVersion
               inline: |
-                Install-Module -Name AzureRM.ApiManagement -Force
+                Enable-AzureRmAlias
                 $context = New-AzureRmApiManagementContext -ResourceGroupName "rg-trainingapp-dev" -ServiceName "apim-trainingapp-dev"
 
   - stage: deploybackendprod
