--- a/MyOrgApim/builds/azure-pipelines.yml
+++ b/MyOrgApim/builds/azure-pipelines.yml
@@ -139,7 +139,7 @@ stages:
 
           - script: |
               terraform state pull > terraform.tfstate
-              AppServiceUrl=$(terraform output -json | jq '.people_api_id.value' -r)
+              PeopleApiId=$(terraform output -json | jq '.people_api_id.value' -r)
               echo "##vso[task.setvariable variable=peopleApiId;isOutput=true]$PeopleApiId"
             workingDirectory: $(System.DefaultWorkingDirectory)/MyOrgApim/PeopleApi/infrastructure/app
             name: tfApplyVars
@@ -149,14 +149,12 @@ stages:
         displayName: Import API
         pool:
           vmImage: 'windows-2019'
-        dependsOn: [ "updateapi" ]
+        dependsOn: [ "updateapi", "deployappservice" ]
         variables:
           - name: personApiId
             value: $[ dependencies.updateapi.outputs['tfApplyVars.personApiId'] ]
           - name: appServiceUrl
             value: $[ dependencies.deployappservice.outputs['tfApplyVars.appServiceUrl'] ]
-          - name: system.debug
-            value: true
         steps:
           - task: AzurePowerShell@4
             displayName: Import API
