--- a/MyOrgApim/builds/azure-pipelines.yml
+++ b/MyOrgApim/builds/azure-pipelines.yml
@@ -137,22 +137,12 @@ stages:
               environmentServiceName: 'Visual Studio Professional with MSDN(aa5e6005-924a-495b-ab54-f2e5bc28b9e7)'
               commandOptions: '-var "rg_name=rg-trainingapp-dev" -var "apim_name=apim-trainingapp-dev" -var "app_service_base_url=$(appServiceUrl)" -var "app_name=trainingapp"'
 
-          - script: |
-              terraform state pull > terraform.tfstate
-              PeopleApiId=$(terraform output -json | jq '.people_api_id.value' -r)
-              echo "##vso[task.setvariable variable=peopleApiId;isOutput=true]$PeopleApiId"
-            workingDirectory: $(System.DefaultWorkingDirectory)/MyOrgApim/PeopleApi/infrastructure/apim
-            name: tfApplyVars
-            displayName: Process TF Outputs
-
       - job: importapidev
         displayName: Import API
         pool:
           vmImage: 'windows-2019'
         dependsOn: [ "updateapi", "deployappservice" ]
         variables:
-          - name: peopleApiId
-            value: $[ dependencies.updateapi.outputs['tfApplyVars.peopleApiId'] ]
           - name: appServiceUrl
             value: $[ dependencies.deployappservice.outputs['tfApplyVars.appServiceUrl'] ]
         steps:
@@ -255,3 +245,23 @@ stages:
               workingDirectory: '$(System.DefaultWorkingDirectory)/MyOrgApim/PeopleApi/infrastructure/apim'
               environmentServiceName: 'Visual Studio Professional with MSDN(aa5e6005-924a-495b-ab54-f2e5bc28b9e7)'
               commandOptions: '-var "rg_name=rg-trainingapp-prod" -var "apim_name=apim-trainingapp-prod" -var "app_service_base_url=$(appServiceUrl)" -var "app_name=trainingapp"'
+
+      - job: importapidev
+        displayName: Import API
+        pool:
+          vmImage: 'windows-2019'
+        dependsOn: [ "updateapi", "deployappservice" ]
+        variables:
+          - name: appServiceUrl
+            value: $[ dependencies.deployappservice.outputs['tfApplyVars.appServiceUrl'] ]
+        steps:
+          - task: AzurePowerShell@4
+            displayName: Import API
+            inputs:
+              azureSubscription: 'Visual Studio Professional with MSDN(aa5e6005-924a-495b-ab54-f2e5bc28b9e7)'
+              scriptType: inlineScript
+              azurePowerShellVersion: LatestVersion
+              inline: |
+                Enable-AzureRmAlias
+                $context = New-AzureRmApiManagementContext -ResourceGroupName "rg-trainingapp-prod" -ServiceName "apim-trainingapp-prod"
+                Import-AzureRmApiManagementApi -Context $context -SpecificationFormat "OpenApi" -SpecificationUrl "$($env:APPSERVICEURL)/swagger/v1/swagger.json" -Path "people" -ApiId "people-api"
